--- a/css/infographic.css
+++ b/css/infographic.css
@@ -18,26 +18,20 @@
 /* 메인배너이미지 끝*/
 
 
-.infographic_container1{
+.info_leftMenu{
+    display: flex;
+    flex-direction: column;
+}
 
-    padding: 0px;
+
+.infographic_container1{
     display : flex;
     justify-content: center;
-    height: 100%;
 }
 
 
 .info_search {
-
     display : inline-block;
-
-}
-
-.info_flex {
-
-    display: flex;
-    justify-content: center;
-    align-content: center;
 }
 
 
@@ -47,31 +41,48 @@
     margin-top: 20px;
     margin-left: 60px;
     margin-right: 60px;
+    height:100%;
 }
 
-.info_input {
-    display: inline-block;
-    border: 1px, solid, black;
-}
-
-.info_hangmok {
-    
-    display: block;
-    border-bottom: 2px, solid, black;
-    margin-top: 50px;
+.info_68{
+    margin-top: 30px;
     margin-bottom: 10px;
-
+    font-size: 14px;
 }
-
 
 .chart_info1 {
-
-    margin-top: 0px;
-    margin-left: 0px;
+    border-bottom: 1px solid #224da0;
+    width: 180px;
+    height: 45px;
+    margin-top:10px;
     display: inline-block;
-    font-size: 14px;
-    color: blue;
+    font-size: 16px;
+    color: #224da0;
     white-space: nowrap;
+    padding:0px;
+    font-weight: bold;
+}
+
+.chart_info1:hover {
+    color: #262626;
+    
+}
+
+.video_info {
+    border-bottom: 1px solid #b3b3b3;
+    width: 180px;
+    height: 45px;
+    margin-top:10px;
+    display: inline-block;
+    font-size: 16px;
+    color: #b3b3b3;
+    white-space: nowrap;
+    padding:0px;
+    
+}
+
+.video_info:hover {
+    color: #262626;
     
 }
 
@@ -82,81 +93,96 @@
     font-size: 30px;
     font-weight: bold;
     white-space: nowrap; 
-    
-    
 }
-
-.info1_a{
-
-    border: 3px, solid, black !important;
-    
-    width: 150px;
-    height: 170px;
-}
-
 
 .chart_info2 {
-    
-
     margin-right: 300px;
     display: inline-block;
-    
-
 }
-
-
-
-
 
 
 .info_box_grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
     justify-content: space-between; 
-
-    height: 10%;
-    width: 100%;
-    
+    grid-template-columns: repeat(2, 530px);
+    grid-template-rows: repeat(5, 90px);
+    gap:35px;
 }
-
 
 
 .info_box {
-    margin-top: 50px;
-    
-    padding: 0px;
-    text-align: center;
-    height: 90px;
-    width: 430px;
-   
-    border-radius: 5px;
+    padding: 20px;
+    border-radius: 4px;
+    background-color:#fff;
+    border-radius: 4px;
+    background-color: #fff;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12),0 1px 3px 0 rgba(0,0,0,.2);
+    display: flex;
+    align-items:center;
+} 
 
-    border: 0.5px, solid, #f2f2f2;
-    box-shadow: 1px 1px 1px rgba(3, 3, 3, 3);
-    
+.info_box:hover {
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12),3px 5px 5px 0 rgba(0,0,0,.2)
+}
+
+
+.info_number{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.info_hover{
+    border-radius: 100%;
+    padding:3px;
+    width:35px;
+    height:35px;
+    text-align: center;
+    vertical-align: center;
+}
+
+.info_hover:hover{
+    border: 1px solid #99b1ff;
+    padding-top:5px;
+}
+
+.info_hover:active{
+    background:#224da0;;
+    color: white;
 }
 
 #info_image{
-    width: 52px; height: 52px; display:inline; margin-top:20px;
-    content: center;
-}
-
-.info_inline{ 
     display: inline;
+    margin-right:20px;
+    width: 52px; height: 52px;
 }
 
 #box_title{
-    display: block; margin:0px; padding:0px;
-    
-}
-#box_span{
     display: inline;
-   
-    margin-left:50px;
-    font-size: 10px;
-    
+    margin:0px;
+    padding:0px;
 }
 
+#box_span1{
+    display: inline;
+    margin-right: 15px;
+    font-size: 12px;
+}
+
+#box_span2{
+    display: inline;
+    margin-left: 15px;
+    font-size: 12px;
+
+}
+
+#box_span3{
+
+    display: block;
+    margin-left: 93px;
+    font-size: 12px;
+
+}
 
 #info_header {
 
@@ -171,16 +197,46 @@
 
 
 #info_select {
-
-    border: 1px, solid, black;
+    width: 134.4px;
+    height: 47.6px;
+    border: 1px, solid, #e1e1e1;
+    border-radius:5px;
+    text-align: center;
 }
 
-
+#info_input {
+    width: 220.78px;
+    height: 47.6px;
+    display: inline-block;
+    border: 1px, solid, #e1e1e1;
+    border-radius:5px;
+    padding:20px;
+    
+}
 
 #info_submit {
-    
+    width: 63.05px;
+    height: 47.6px;
     border: 1px, solid, black;
     display: inline-block;
+    background-color: #224da0;
+    color: white;
+    border-radius:5px;
+    font-weight:bold;
     
+}
+
+#info_submit:hover {
+    opacity: 0.6;
+    
+}
+
+#test1{
+    display: inline;
+    justify-content: space-between; 
+}
+
+#test2{
+    display: inline;
 }
 
