--- a/css/reset.css
+++ b/css/reset.css
@@ -20,6 +20,6 @@
 .wrapper {
     background-color: white !important;
     max-width: 1600px; /* 페이지 전체 너비 조절 */
-    margin: 0 auto; /* 가운데 정렬 */
-    padding: 0 180px; /* 양옆 여백 */
+    margin: 0 auto; 
+    padding: 0 180px; 
 }
