--- a/css/data.css
+++ b/css/data.css
@@ -15,20 +15,21 @@
 
 .sidebar ul li {
     font-size: 0.9rem; /* 더 큰 크기 */
-    margin-left: 0.15rem;
-    margin-bottom: 0.8rem;
+    margin-left: 0.1rem;
+    margin-bottom: 1.2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .sidebar ul li input[type="checkbox"] {
-    background-color: white !important;
-    width: 16px; /* 체크박스 크기 증가 */
-    height: 16px;
-    border: 1px solid #a6a6a6;
-    border-radius: 3px; /* 체크박스 둥글게 */
+    background-color: white;
+    width: 20px;
+    height: 20px;
+    border: 1.5px solid #e1e1e1;
+    border-radius: 3px;
     margin-right: 0.6rem;
+    appearance: none;
 }
 
 .sidebar ul li input[type="checkbox"]:checked {
@@ -37,21 +38,32 @@
 }
 
 .sidebar ul li input[type="checkbox"]:checked::after {
-    top: 1px;
-    left: 4px;
-    width: 5px; /* 체크 표시 크기 증가 */
-    height: 8px;
+    content: "";
+    display: block;
+    width: 6px;
+    height: 9px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    position: relative;
+    top: 2px;
+    left: 5px;
+}
+
+.sidebar ul li input[type="checkbox"]:hover {
+    border-color: #000099;
 }
 
 .item-value {
     margin-left: auto;
     font-size: 0.8rem; /* 더 큰 크기 */
-    color: #33ccff;
+    color: #6fc3ee;
 }
 
 .aside-hr {
-    height: 1px; /* 선의 두께 증가 */
-    background-color: #a6a6a6 !important;
+    border: none;
+    height: 1px;
+    background-color: #e1e1e1 !important;
     margin: 15px 0;
 }
 
@@ -78,9 +90,11 @@
 }
 
 .popular-section h6, .latest-section h6 {
-    font-size: 1rem; /* 더 큰 크기 */
+    font-size: 0.9rem; /* 더 큰 크기 */
     margin: 0;
     padding: 0;
+    padding-bottom: 10px;
+    font-weight: 700;
 }
 
 .popular-data, .latest-data {
@@ -94,7 +108,7 @@
 
     overflow: hidden;
     position: relative;
-    min-height: 8rem;
+    min-height: 5.6rem;
 }
 
 .slide {
@@ -106,11 +120,12 @@
     top: 0;
     left: 0;
     transition: opacity 0.5s ease, transform 0.5s ease;
+    border-radius: 2px;
 
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
 }
 
 /* 첫 슬라이드 체크 시 */
@@ -178,22 +193,25 @@
 
 
 .popular-data:hover, .latest-data:hover {
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.3);
 }   
 
 .slide img {
-    max-width: 100%;
+    width: 4rem;
     height: auto; /* 이미지 비율 유지 */
     object-fit: contain;
+    padding: 5px;
 }
 
 .data-item {
     font-size: 0.9rem;
-    padding: 5px 5px;
+    padding: 12px;
 }
 
 .data-item p {
+    font-size: 0.78rem;
     color: #a6a6a6;
+    padding-top: 6px;
 }
 
 /* 데이터 테이블 */
@@ -218,17 +236,20 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 48%; /* 검색바 너비 증가 */
+    width: 42%; /* 검색바 너비 증가 */
     gap: 10px;
     margin-top: 30px;
+    border: none;
 }
 
 .search-bar input {
     flex: 1;
     padding: 8px; /* 패딩 증가 */
     border-radius: 3px;
-    border: 1px solid #ccc; /* 기본 테두리 */
-    height: 100%; /* 높이 증가 */
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    border: 1px solid #fff;
+    height: 100%;
     font-size: 0.9rem; /* 더 큰 크기 */
     box-shadow: 0 0 5px rgba(0, 153, 255, 0.5); /* 항상 그림자 추가 */
     transition: box-shadow 0.3s ease; /* 부드러운 전환 효과 추가 */
@@ -240,7 +261,7 @@
 }
 
 .search-bar button {
-    background-color: #000099; /* 남색 배경 */
+    background-color: #214da0; /* 남색 배경 */
     padding: 8px 20px; /* 높이 및 넓이 증가 */
     border-radius: 6px; /* 더 둥글게 */
     color: white; /* 흰색 글씨 */
@@ -257,7 +278,7 @@
 .search-description {
     background-color: #eceef6 !important;
     font-size: 0.8rem; /* 더 큰 크기 */
-    width: 48%; /* 검색바 너비에 맞춤 */
+    width: 42%; /* 검색바 너비에 맞춤 */
     color: #666;
     text-align: left;
 }
@@ -285,7 +306,7 @@
     justify-content: space-between; /* 양쪽 끝에 배치 */
     align-items: center; /* 수직 중앙 정렬 */
     padding: 10px; /* 여백 */
-    border-bottom: 2px solid #ddd; /* 하단 테두리 */
+    border-bottom: 1px solid; /* 하단 테두리 */
 }
 
 .item-count {
@@ -307,7 +328,7 @@
 }
 
 .add-button {
-    background-color: #000099; /* 원하는 배경색 */
+    background-color: #214da0; /* 원하는 배경색 */
     color: white; /* 글씨 색상 */
     padding: 10px 20px; /* 패딩 조정 */
     border: none; /* 기본 테두리 제거 */
@@ -347,9 +368,58 @@
 }
 
 .data-name {
-    flex: 2; /* 데이터명 열을 두 배 넓이로 설정 */
-    min-width: 1000px; /* 최소 너비 설정 (원하는 대로 조정 가능) */
+    flex: 2;
+    display: flex;
+    flex-direction: column;
 }
+
+.data-name-container {
+    display: flex;
+    justify-content: start;
+}
+
+.data-name span {
+    margin-left: 4px;
+}
+
+.data-name-label {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+    background-color: #ff5165;
+    color: white;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    font-size: 0.7rem;
+    line-height: 1;
+    margin-top: 2px;
+}
+
+.data-file-label {
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+    font-size: 0.7rem;
+    padding-top: 6px;
+}
+
+.data-file-label span {
+    border: 1px solid #0f6cb6;
+    color: #0f6cb6;
+    padding: 2px;
+}
+
+.data-name-content {
+    text-decoration: none;
+    transition: text-decoration 0.3s;
+}
+
+.data-name-content:hover {
+    text-decoration: underline;
+}
+
 
 .data-table td {
     min-width: 20px; /* 최소 너비 설정 */
@@ -389,11 +459,11 @@
 }
 
 .pagination-label:hover {
-    border-color: #000099;
+    border-color: #214da0;
 }
 
 input[type="radio"]:checked + .pagination-label {
-    background-color: #000099;
+    background-color: #214da0;
     color: white;
 }
 
@@ -402,14 +472,6 @@ input[type="radio"]:checked + .pagination-label {
     align-self: center; /* 중앙 정렬 */
     font-size: 0.9rem; /* 글씨 크기 */
     color: #333; /* 글씨 색상 */
-}
-
-
-@media (prefers-color-scheme: dark) {
-    .sidebar ul li input[type="checkbox"] {
-        background-color: white; /* 체크박스 배경을 흰색으로 설정 */
-        border-color: #a6a6a6; /* 체크박스 테두리 색상 */
-    }
 }
 
 .data-dropdown {
@@ -425,25 +487,19 @@ input[type="radio"]:checked + .pagination-label {
     cursor: pointer; /* 커서 포인터 */
 }
 
-.data-dropdown-list {
-    display: none; /* 기본적으로 리스트 숨김 */
-    position: absolute; /* 드롭다운 위치 설정 */
-    background-color: white; /* 배경색 */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* 그림자 */
-    margin-top: 5px; /* 버튼 아래 여백 */
-    padding: 0; /* 패딩 초기화 */
-    list-style: none; /* 기본 리스트 스타일 제거 */
-    z-index: 1000; /* 드롭다운이 다른 요소 위에 나타나도록 설정 */
-    width: 150px;
-}
+.dropdown-select {
+    padding: 8px 12px;
+    font-size: 16px;
+    border-radius: 4px;
+    background-color: #fff;
+    cursor: pointer;
+  }
+
 
 .data-dropdown:hover .data-dropdown-list {
     display: block;
 }
 
-.data-dropdown-list li {
-    padding: 10px; /* 각 리스트 항목의 패딩 */
-}
 
 .dropdown-list li a {
     text-decoration: none; /* 링크 밑줄 제거 */
