--- a/css/report.css
+++ b/css/report.css
@@ -1,4 +1,3 @@
-/* 메인 이미지 */
 .main-image {
     width: 100%;
     display: flex;
@@ -15,6 +14,32 @@
     grid-area: sidebar;
 }
 
+.sidebar ul {
+    list-style: none;
+}
+
+.sidebar ul li {
+    font-size: 1.1rem;
+    margin-left: 0.1rem;
+    padding: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #e4e4e4;
+    color: #999999;
+}
+
+.sidebar ul li:hover {
+    color: black;
+}
+
+.sidebar-menu li.actived {
+    border-bottom: 1px solid #224da0 !important;
+    font-weight: 700 !important;
+    color: #224da0 !important;
+}
+
+
 .main-content {
     grid-area: main;
     display: flex;
@@ -23,15 +48,280 @@
     margin-left: 1.5rem;
 }
 
-.main-title {
+.main-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main-header h1 {
     font-size: 2rem;
     font-weight: 700;
 }
 
+.data-research {
+    box-sizing: border-box;
+    display: inline-block;
+    text-align: center;
+    font-weight: 500;
+    border-radius: 4px;
+    border: 1px solid #224da0;
+    background-color: #224da0;
+    color: #fff;
+    cursor: pointer;
+    vertical-align: middle;
+    font-size: 1rem;
+    padding: 11px 16px;
+}
 
-.donut-graphs {
-    margin: 1rem 1rem;
+.data-research:hover {
+    opacity: 0.7;
+}
+
+.report-view > ul:first-child > li {
+    display: inline-block;
+    zoom: 1;
+    vertical-middle: middle;
+}
+
+.report-view > ul:first-child > * {
+    position: relative;
+    padding-right: 20px;
+}
+
+.report-view > ul:first-child {
+    color: #666;
+}
+
+.report-view > ul:first-child > :after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    margin-top: -5px;
+    right: 8px;
+    width: 1px;
+    height: 10px;
+    background-color: #e1e1e1;
+    opacity: 1;
+}
+
+img {
+    border: 0;
+    max-width: 100%;
+    height: auto;
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
+
+.section-img {
+    float: left;
+    width: 100%;
+    background-color: #000;
+    text-align: center;
+    border-bottom: 4px solid black;
+}
+
+.section-text {
+    padding: 40px;
+    box-sizing: border-box;
+    float: left;
+    width: 100%;
+}
+
+.section-text > div:not(.watermark) {
+    overflow: hidden;
+    position: relative;
+}
+
+div {
+    display: block;
+    unicode-bidi: isolate;
+}
+
+h3 {
+    font-size: 2rem;
+    display: black;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+p {
+    font-size: 1rem;
+    display: block:
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    word-spacing: 2px;
+    line-height: 2.0;
+
+}
+
+.static-value {
+    font-weight: 900;
+    color: #008ddb;
+}
+
+hr {
+    border: none;             
+    height: 1px;               
+    background-color: #ebebeb;
+}
+
+
+/* essence */
+
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* 요소 간의 간격 */
+}
+
+.search-filter {
+    padding: 8px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 120px;
+    height: 50px;
+}
+
+.search-input {
+    padding: 8px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 200px; /* 검색창의 너비 */
+    height: 50px;
+}
+
+.search-button {
+    padding: 8px 16px;
+    background-color: #224da0;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    height: 50px;
+}
+
+.search-button:hover {
+    opacity: 1; 
+}
+
+table {
+    border-spacing: 0;
+    box-sizing: border-box;
+    text-indent: initial;
+    border-color: gray;
+}
+
+.table-header {
+    display: flex; /* 수평으로 정렬 */
+    justify-content: space-between; /* 양쪽 끝에 배치 */
+    align-items: left; 
+    padding: 1rem;
+    border-bottom: 1px solid; /* 하단 테두리 */
+}
+
+.item-count {
+    font-size: 1rem; /* 글씨 크기 */
+    color: #333; /* 글씨 색 */
+}
+
+.data-table {
+    width: 100%;
+    border-collapse: collapse;
+    
+}
+
+.data-table th, .data-table td {
+    padding: 1rem; /* 셀 패딩 */
+    border-bottom: 1px solid #ddd; /* 하단 경계선 추가 */
+    display: flex;
+    justify-content: space-between; /* 공간을 균등하게 분배 */
+    flex: 0.1;
+}
+
+.data-table tr {
+    display: flex;
+}
+
+.data-table th {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    font-size: 0.8rem;
+    min-width: 5px;
+    justify-content: left;
+    color: #a6a6a6;
+}
+
+.pagination-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin-left: 160px;
+}
+
+.pagination-container input[type="radio"] {
+    display: none; /* 라디오 버튼 숨기기 */
+}
+
+.pagination-label {
+    background-color: white;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    transition: border-color 0.2s, background-color 0.2s;
+    display: inline-block;
+    text-align: center;
+}
+
+.pagination-label:hover {
+    border-color: #214da0;
+}
+
+input[type="radio"]:checked + .pagination-label {
+    background-color: #214da0;
+    color: white;
+}
+
+.table-data-title {
+    flex: 1.5 !important;
+}
+
+.data-name-label {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+    background-color: #ff5165;
+    color: white;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    font-size: 0.7rem;
+    line-height: 1;
+    margin-top: 2px;
+    margin-left: 4px;
+}
+
+.data-name-container {
+    display: flex;
+    justify-content: start;
+}
+
+.data-name-content {
+    text-decoration: none;
+    transition: text-decoration 0.3s;
+}
+
+.data-name-content:hover {
+    text-decoration: underline;
 }
